--- a/SMT_Reflow_Profile_Comparison_System.csproj
+++ b/SMT_Reflow_Profile_Comparison_System.csproj
@@ -121,12 +121,19 @@
     <Content Include="Content\Header\jabil_log.jpg" />
     <Content Include="Content\Img\loading-sm.gif" />
     <Content Include="Content\Img\loading.gif" />
+    <Content Include="Content\Plugins\bootstrap-editable.js" />
+    <Content Include="Content\Plugins\bootstrap-table-editable.js" />
     <Content Include="Content\Plugins\bootstrap-table-export.js" />
     <Content Include="Content\Plugins\bootstrap-table-group-by.css" />
     <Content Include="Content\Plugins\bootstrap-table-group-by.js" />
     <Content Include="Content\Plugins\bootstrap-table.min.css" />
     <Content Include="Content\Plugins\bootstrap-table.min.js" />
     <Content Include="Content\Plugins\fileinput.min.css" />
+    <Content Include="Content\Plugins\moment.js" />
+    <Content Include="Content\Plugins\select2.css" />
+    <Content Include="Content\Plugins\select2.js" />
+    <Content Include="Content\Plugins\spec.css" />
+    <Content Include="Content\Plugins\spec.js" />
     <Content Include="Content\Plugins\tableExport.js" />
     <Content Include="favicon.ico" />
     <Content Include="packages.config" />
